Add v5.12 bullet tracking fix

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     <p><a href="https://wearescientist.github.io/rouge-cow/">🎮 在线试玩最新版本</a></p>
     
     <div class="version">
+        <h2>v5.12 - 子弹追踪修复</h2>
+        <p class="info">修复：近战武器子弹速度为0的问题，现在所有子弹都能正常飞行和追踪</p>
+        <video controls>
+            <source src="v5.12-普通模式-AI测试视频.webm" type="video/webm">
+        </video>
+    </div>
+    
+    <div class="version">
         <h2>v5.11 - 优化版</h2>
         <p class="info">优化内容：子弹自动追踪、敌人模型缩小、伤害平衡</p>
         <video controls>
