Add v6.0 story mode

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     <p><a href="https://wearescientist.github.io/rouge-cow/">🎮 在线试玩最新版本</a></p>
     
     <div class="version">
+        <h2>v6.0 - 故事模式</h2>
+        <p class="info">新增：开场剧情界面，讲述牛牛进入洞穴的背景故事</p>
+        <video controls>
+            <source src="v6.0-无敌模式-AI测试视频.webm" type="video/webm">
+        </video>
+    </div>
+    
+    <div class="version">
         <h2>v5.12 - 子弹追踪修复</h2>
         <p class="info">修复：近战武器子弹速度为0的问题，现在所有子弹都能正常飞行和追踪</p>
         <video controls>
