--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     <p><a href="https://wearescientist.github.io/rouge-cow/">🎮 在线试玩最新版本</a></p>
     
     <div class="version">
+        <h2>v7.0 - 新房间类型</h2>
+        <p class="info">新增：宝箱房(💎)、商店(🏪)、隐藏房(👁️)，每种房间独特机制和奖励</p>
+        <video controls>
+            <source src="v7.0-无敌模式-AI测试视频.webm" type="video/webm">
+        </video>
+    </div>
+    
+    <div class="version">
         <h2>v6.0 - 故事模式</h2>
         <p class="info">新增：开场剧情界面，讲述牛牛进入洞穴的背景故事</p>
         <video controls>
