Add v0.8.0 complete 3-minute playthrough video

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <p><a href="https://wearescientist.github.io/rouge-cow/">🎮 在线试玩最新版本</a></p>
     
     <div class="version">
-        <h2>v0.8.0 - 完整版（六层通关）</h2>
-        <p class="info">🎉 最终整合版：6层完整地图 + 盲眼商店 + 武器进化 + 55个道具 + 完整剧情</p>
+        <h2>v0.8.0 - 完整版（3分钟通关演示）</h2>
+        <p class="info">🎉 最终整合版：6层完整地图 + QE武器切换 + 盲眼商店 + 武器进化 + 55个道具 + 完整剧情</p>
         <video controls>
-            <source src="v0.8.0-六层通关-无敌模式-AI测试视频.webm" type="video/webm">
+            <source src="v0.8.0-完整通关-3分钟.webm" type="video/webm">
         </video>
     </div>
     
